--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@ permalink: /404.html
 
       <div class="error-text">
         <a href="{{ site.baseurl }}/">Home</a> |
+        <a href="{{ site.baseurl }}/portfolio/">Portfolio</a> |
         <a href="{{ site.baseurl }}/posts/">All Posts</a> |
         <a href="{{ site.baseurl }}/search/">Search</a>
       </div>
